# desktop

./: .cinch-ref  .gitignore  .relay-ref  CLAUDE.md  LICENSE  Makefile  README.md  index.html  lefthook.yml  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yml  desktop-release.yml
preview/: index.html
scripts/: check-sibling-pins.sh  tauri-dev.mjs  update-cask.sh
src/: App.css  App.test.tsx  App.tsx  ConfirmDialog.tsx  RetentionSlider.tsx  SettingsPane.test.tsx  SettingsPane.tsx  bindings.ts  design.ts  icons.tsx  main.tsx  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth_bootstrap.rs  crypto.rs  events.rs  lib.rs  main.rs  protocol.rs  sync_status.rs  tray.rs  update_check.rs  ws.rs
src-tauri/src/auth/: credential.rs  mod.rs  propagate.rs  state.rs
src-tauri/src/clipboard/: mod.rs  monitor.rs  service.rs
src-tauri/src/clipboard/backend/: macos.rs  mod.rs  types.rs
src-tauri/src/commands/: auth.rs  clips.rs  mod.rs  relays.rs  updater.rs
src-tauri/src/store/: db.rs  models.rs
src-tauri/src/tests/: auth_bootstrap_test.rs  auth_state_test.rs  clip_source_test.rs  decrypt_failure_recovery_test.rs  deep_link_test.rs  mod.rs  offline_queue_test.rs  remote_login_test.rs  ws_lifecycle_test.rs
src-tauri/tests/: credential_watcher.rs  export_bindings.rs  ws_revoke_handler.rs
src/components/: AddRelayDialog.test.tsx  AddRelayDialog.tsx  AddSshMachineDialog.test.tsx  AddSshMachineDialog.tsx  AdoptedAuthToast.tsx  CleanupDialog.tsx  ClipCard.test.tsx  ClipCard.tsx  ClipDecryptFailedToast.tsx  ClipDetail.test.tsx  ClipDetail.tsx  ClipList.test.tsx  ClipList.tsx  DeviceDashboard.tsx  DeviceUpdateAction.test.tsx  DeviceUpdateAction.tsx  DeviceVersionBadge.test.tsx  DeviceVersionBadge.tsx  DeviceVersionCell.tsx  DevicesPanel.test.tsx  DevicesPanel.tsx  EmptyState.test.tsx  EmptyState.tsx  LocalOnlyView.test.tsx  LocalOnlyView.tsx  MachinesPanel.test.tsx  MachinesPanel.tsx  OfflineBar.tsx  (+14 more)
(+32 files in other folders)
